--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,12 @@
 Home page
 {% endblock %}
 {% block content %}
-<div> 
-    this is the body
+<div class = 'header'>
+    <h1> Welcome to the home page </h1>
+</div>
+<div class = 'container'>
+    <div class = 'center-div'>
+        <h2> This is the body </h2>
+    </div>
 </div>
 {% endblock %}
