--- a/static/site.css
+++ b/static/site.css
@@ -7,15 +7,15 @@
  body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
-    background: #f1f1f1;
+    background: #131313;
  }
  
  /* Header (div) formatting */
  .header {
     padding: 10px;
     text-align: center;
-    background-color: #cccccc;
-    color: #000000;
+    background-color: #4b4b4b;
+    color: #ffffff;
  }
  
  .header h1 {
@@ -32,7 +32,7 @@
  /* Style the top navigation bar */
  .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(49, 49, 49);
   }
   
   /* Style the topnav links */
@@ -48,7 +48,7 @@
   /* Change color on hover */
   .topnav a:hover {
     background-color: #ddd;
-    color: black;
+    color: rgb(68, 68, 68);
   }
   
   /* Style the content */
@@ -64,12 +64,13 @@
      top: 200px;
      height: 100px;
      margin-top: -200px;
-     background-color: #cccccc;
+     color: white;
+     background-color: rgb(49, 49, 49);
   }
  
   /*Nested divs*/
   .container {
-    background: rgb(55, 9, 205);
+    background: rgb(38, 38, 38);
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -81,7 +82,7 @@
     width: 100%;
     margin: 10px;
     padding: 5px;
-    background: rgb(14, 167, 249);
+    background: rgb(72, 72, 72);
     color: white;
  }
  
