--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@ Home page
 {% endblock %}
 {% block content %}
 <div class = 'header'>
-    <h1> Welcome to the home page </h1>
+    <h1> Welcome to the Home Page </h1>
 </div>
 <div class = 'container'>
     <div class = 'center-div'>
