--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
     <body> 
         <div class="topnav">
             <a href="{{ url_for('home') }}">Home</a> 
+            <a href="{{ url_for('gettable') }}">Table</a> 
         </div> 
 
         <div>
