--- a/templates/queried.html
+++ b/templates/queried.html
@@ -57,6 +57,9 @@ Generate Tables
         </form>
         </center>
     </div>
+    <div class = 'center-div'>
+        resuls goes here
+    </div>
 
 </div>
 {% endblock %}
