--- a/templates/table.html
+++ b/templates/table.html
@@ -52,8 +52,8 @@ Generate Tables
 
     <div class = 'center-div'>
         <center>
-        <form method="post" action="/">
-            <input type="submit" value="Submit" name="action1"/>
+        <form action="{{ url_for('getqueried') }}">
+            <input type="submit" value="Submit" />
         </form>
         </center>
     </div>
