--- a/templates/queried.html
+++ b/templates/queried.html
@@ -58,7 +58,15 @@ Generate Tables
         </center>
     </div>
     <div class = 'center-div'>
-        resuls goes here
+        <ul>Cures matching your query: 
+            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07337</a> </li>
+            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07338</a> </li>
+            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07339</a> </li>
+            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07340</a> </li>
+            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07341</a> </li>
+            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07343</a> </li>
+            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07347</a> </li>
+        </ul> 
     </div>
 
 </div>
