--- a/templates/queried.html
+++ b/templates/queried.html
@@ -59,13 +59,13 @@ Generate Tables
     </div>
     <div class = 'center-div'>
         <ul>Cures matching your query: 
-            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07337</a> </li>
-            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07338</a> </li>
-            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07339</a> </li>
-            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07340</a> </li>
-            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07341</a> </li>
-            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07343</a> </li>
-            <li> <a href="C:\Users\frede\OneDrive\Desktop\University\Hackathon\boeingMoney-main\templates\display_json.html">AC2-07347</a> </li>
+            <li> <a href="{{ url_for('show_json') }}">AC2-07337</a> </li>
+            <li> <a href="{{ url_for('show_json') }}">AC2-07338</a> </li>
+            <li> <a href="{{ url_for('show_json') }}">AC2-07339</a> </li>
+            <li> <a href="{{ url_for('show_json') }}">AC2-07340</a> </li>
+            <li> <a href="{{ url_for('show_json') }}">AC2-07341</a> </li>
+            <li> <a href="{{ url_for('show_json') }}">AC2-07343</a> </li>
+            <li> <a href="{{ url_for('show_json') }}">AC2-07347</a> </li>
         </ul> 
     </div>
 
