--- a/templates/display_json.html
+++ b/templates/display_json.html
@@ -1,3 +1,56 @@
+<head>
+  <meta charset="utf-8" /> 
+  <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='site.css')}}" /> 
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='table.css')}}" /> 
+</head>
+
+
+<h1>Run 07737</h1>
+
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>FileName</th>
+      <th>FilePath</th>
+      <th>LoadNumber</th>
+      <th>Equipment</th>
+      <th>RunRecipe</th>
+      <th>RunStart</th>
+      <th>RunEnd</th>
+      <th>RunDuration</th>
+      <th>FileLength</th>
+      <th>OperatorName</th>
+      <th>ExportControl</th>
+      <th>IP</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>AC2-07337.DAT</td>
+      <td>\\server1\AC2-DATA</td>
+      <td>7337</td>
+      <td>Autoclave #2</td>
+      <td>XB-Falcon-Body</td>
+      <td>2022-10-06T01:27:46</td>
+      <td>2022-10-06T18:33:15</td>
+      <td>1025.48</td>
+      <td>192505</td>
+      <td>raymond</td>
+      <td>AU NSR</td>
+      <td>Third Party Disclosure Requires Written Approval</td>
+    </tr>
+  </tbody>
+</table>
+
+<br>
+
+<h1>Parts Information</h1>
+
+<br>
+
 <table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -88,3 +141,7 @@
     </tr>
   </tbody>
 </table>
+
+<br>
+
+<a href="{{ url_for('home') }}">Home</a> 
