--- a/templates/homes.html
+++ b/templates/homes.html
@@ -4,7 +4,8 @@ Home page
 {% endblock %}
 {% block content %}
 <div class = 'header'>
-    <h1> Welcome to the Home Page </h1>
+    <h1> Boeing </h1>
+    <p><center> EZUPLOAD </center></p>
 </div>
 <div class = 'container'>
     <div class = 'center-div'>
@@ -160,6 +161,9 @@ Home page
                 <input type="submit" value="Submit" />
             </form>
         </center>
+    </div>
+    <div class = 'center-div'>
+        <center><h2> Folder Submitted</h2></center>
     </div>
 </div>
 {% endblock %}
