--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,8 @@ Home page
 {% endblock %}
 {% block content %}
 <div class = 'header'>
-    <h1> Welcome to the Home Page </h1>
+    <h1> Boeing </h1>
+    <p><center> EZUPLOAD </center></p>
 </div>
 <div class = 'container'>
     <div class = 'center-div'>
